--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19# This workflow will build a golang project
+          go-version: 1.19
 
       - name: Build
         run: go build -v ./...
